I completed the css wars exercise

--- a/warmups/barebonescss/index.html
+++ b/warmups/barebonescss/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <title>bare bones css</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Arimo|PT+Serif|Playfair+Display" rel="stylesheet">
 </head>
+
 <body>
+
+    <div id="big">
+        <h1 id="large">greetings!</h1>
+        <h1 class="small">Hello</h1>
+        <div>
+
+        <ul id="differentlist">
+            <p>pupper</p>
+            <li class="small">first</li>
+            <li>second</li>
+            <li>third</li>
+            <li>fourth</li>
+        </ul>
+        </div>
+    </div>
+
+    <span class="small"> wassup dawwwggg</span>
+    <span class="small"> wassup dawwwggg</span>
+    <span class="small"> wassup dawwwggg</span>
+    <span class="small"> wassup dawwwggg</span>
+    <span class="small"> wassup dawwwggg</span>
+
+
+
     <p id="text">Hello World!</p>
 </body>
 </html>
