--- a/css boxes/index.html
+++ b/css boxes/index.html
@@ -5,8 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-    
-    <script src="app.js" type></script>
+    <h1>hellow world</h1>
+    <p>yooyoyoy</p>
 </body>
 </html>
