--- a/exercise/Css selectors/index.html
+++ b/exercise/Css selectors/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Selectorize</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 </head>  
 <body>  
 <!--need items to change with tags-->  
