--- a/projects/Mario's Pest Control/index.html
+++ b/projects/Mario's Pest Control/index.html
@@ -15,10 +15,11 @@
             <span class="navigate">Home</span><span class="navigate">Contact</span><span class="navigate">Address</span>
 
         </nav>
-
+        
+        <h1>Mario's Pest Control</h1>
         <div class="row">
             <div class="col-lg-12 text-left post-head img-responsive imgwrapper">
-                <h1>Mario's Pest Control</h1>
+               <img src="https://images-production.global.ssl.fastly.net/uploads/posts/image/122870/successful-video-games-history-fhm.png" alt="" class= "img-responsive">
             </div>
         </div>
     </header>
